<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star_border"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_border"
        android:title="@string/action_bookmark"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white" />
    <item
        android:id="@+id/action_notify"
        android:icon="@drawable/ic_notifications_none"
        android:title="@string/action_notify"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white" />
    <item
        android:id="@+id/action_block"
        android:title="@string/action_block"
        app:showAsAction="never" />
</menu>
